# image-palette-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Color.hpp  Image.hpp  KMeansClustering.hpp  RNG.hpp
src/: Image.cpp  KMeansClustering.cpp  main.cpp
